crates/test-ui/ui/msg_send_no_return_type.stderr
error[E0283]: type annotations needed
 --> ui/msg_send_no_return_type.rs
  |
  |     unsafe { msg_send![cls, new] };
  |              ^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: the type must implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<1>>`
help: the following types implement trait `objc2::__macros::ConvertReturn<MethodFamily>`
 --> $WORKSPACE/crates/objc2/src/__macros/retain_semantics.rs
  |
  | impl<T: Message> ConvertReturn<NewFamily> for Option<Retained<T>> {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Option<Retained<T>>`
...
  | impl<T: Message> ConvertReturn<NewFamily> for Retained<T> {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Retained<T>`
  = note: required for `objc2::__macros::MethodFamily<1>` to implement `objc2::__macros::RetainSemantics<&AnyClass, _, objc2::__macros::KindSendMessage>`
  = note: required for `objc2::__macros::MethodFamily<1>` to implement `objc2::__macros::MsgSend<&AnyClass, _>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
